--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>先测试测试</title>
+<title>暂时先不测试了</title>
 <script src="./vue.min.js"></script>
 <script src="//imgcache.qq.com/qcloud/cloudbase-js-sdk/1.2.1/cloudbase.js"></script>
 </head>
